fixed bug of navbar width on mobile version

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -376,6 +376,7 @@ a {
 
 @media(max-width: 767px) {
   .navbar-container .navbar-content {
+    width: 90%;
     .element-button {
       margin-right: 20px;
     }
